# DevScape

./: .bandit  .coverage  .coverage_summary  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Invoke-Guardians.ps1  Makefile  ONBOARDING.md  README.md  celebrate.py  check_non_ascii.py  check_utf8.ps1  coverage.xml  game_launch_output.txt  lineage.db  lineage.sql  mypy.ini  ollama_fail.txt  onboarding_rituals.py  pre-push-ps1-no-pylint  pyproject.toml  pytest.ini  pytest_all_no_cov_output_2.txt  pytest_durations.txt  pytest_freeze_log.txt  pytest_freeze_log_2.txt  pytest_full_output.txt  pytest_minimal_output.txt  pytest_output.txt  pytest_output_attempt.txt  run_game.bat  run_game.py  state.json  (+5 more)
Coverage report_files/: Coverage report.html
config/: onboarding.yml  prompts.yml
docs/: architecture.md  design.md
game/: main.py  ollama_ai.py  requirements.txt  state.py  test_draw_text.py  test_exports.py  test_game.py  test_main.py  test_ollama_ai.py  test_state.py
tests/: conftest.py  test_badges.py  test_config_scroll.py  test_db_scroll.py  test_draw_text.py  test_engine.py  test_engine_cli.py  test_engine_events.py  test_entity_placement.py  test_exports.py  test_find_path_a_star.py  test_game.py  test_gui_scroll.py  test_main.py  test_main_apply_planetary_event.py  test_main_camera_clamp.py  test_main_cover_more.py  test_main_events.py  test_main_exports.py  test_main_game.py  test_main_game_helpers.py  test_main_helpers_again.py  test_main_input_and_send.py  test_main_minimal.py  test_main_overlay.py  test_main_update_chat_and_silent.py  test_ollama_ai.py  test_ollama_ai_branches2.py  test_ollama_ai_client_and_get_move.py  (+24 more)
(+29 files in other folders)
