[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devscape"
version = "0.0.0"
description = "DevScape — repository and companion tooling"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://example.org/devscape"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--color=yes"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".venv", ".git", "__pycache__", "docs", "build", "dist", ".tox", "pip/_vendor"]
ignore = ["E203", "W503"] # E203: whitespace before ':', W503: line break before binary operator
